@@ -20,6 +20,7 @@ import org.apache.lucene.queries.mlt.MoreLikeThis;
 import org.apache.lucene.search.Query;
 import org.apache.solr.common.SolrDocument;
 import org.apache.solr.common.SolrException;
+import org.apache.solr.common.StringUtils;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.NamedList;
@@ -38,8 +39,11 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.regex.Pattern;
 
 public class CloudMLTQParser extends QParser {
+  // Pattern is thread safe -- TODO? share this with general 'fl' param
+  private static final Pattern splitList = Pattern.compile(",| ");
 
   public CloudMLTQParser(String qstr, SolrParams localParams,
                          SolrParams params, SolrQueryRequest req) {
@@ -86,14 +90,21 @@ public class CloudMLTQParser extends QParser {
     String[] qf = localParams.getParams("qf");
     Map<String, Collection<Object>> filteredDocument = new HashMap();
 
+    ArrayList<String> fieldNames = new ArrayList();
+
     if (qf != null) {
-      mlt.setFieldNames(qf);
-      for (String field : qf) {
-        filteredDocument.put(field, doc.getFieldValues(field));
+      for (String fieldName : qf) {
+        if (!StringUtils.isEmpty(fieldName))  {
+          String[] strings = splitList.split(fieldName);
+          for (String string : strings) {
+            if (!StringUtils.isEmpty(string)) {
+              fieldNames.add(string);
+            }
+          }
+        }
       }
     } else {
       Map<String, SchemaField> fields = req.getSchema().getFields();
-      ArrayList<String> fieldNames = new ArrayList();
       for (String field : doc.getFieldNames()) {
         // Only use fields that are stored and have an explicit analyzer.
         // This makes sense as the query uses tf/idf/.. for query construction.
@@ -101,10 +112,18 @@ public class CloudMLTQParser extends QParser {
         if(fields.get(field).stored() 
             && fields.get(field).getType().isExplicitAnalyzer()) {
           fieldNames.add(field);
-          filteredDocument.put(field, doc.getFieldValues(field));
         }
       }
-      mlt.setFieldNames(fieldNames.toArray(new String[fieldNames.size()]));
+    }
+
+    if( fieldNames.size() < 1 ) {
+      throw new SolrException( SolrException.ErrorCode.BAD_REQUEST,
+          "MoreLikeThis requires at least one similarity field: qf" );
+    }
+
+    mlt.setFieldNames(fieldNames.toArray(new String[fieldNames.size()]));
+    for (String field : fieldNames) {
+      filteredDocument.put(field, doc.getFieldValues(field));
     }
 
     try {
