@@ -209,6 +209,9 @@ Bug Fixes
 * SOLR-7741: Add missing fields to SolrIndexerConfig.toMap
   (Mike Drob, Christine Poerschke via Ramkumar Aiyengar)
 
+* SOLR-7143: MoreLikeThis Query parser should handle multiple field names
+  (Jens Wille, Anshum Gupta)
+
 Optimizations
 ----------------------
 
